force-app/main/default/objects/aos_Postcode__c/aos_Postcode__c.object-meta.xml
<CustomObject>
    <description>Reference list of QLD Postcodes</description>
    <label>Postcode</label>
    <nameField>
        <label>Postcode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>