force-app/main/default/objects/aos_Postcode__c/fields/aos_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>aos_Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>