force-app/main/default/objects/aos_Postcode__c/fields/aos_LGA__c.field-meta.xml
<CustomField>
    <fullName>aos_LGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LGA</label>
    <referenceTo>aos_LGA__c</referenceTo>
    <relationshipLabel>Postcodes</relationshipLabel>
    <relationshipName>aos_Postcodes</relationshipName>
    <type>Lookup</type>
</CustomField>