force-app/main/default/objects/aos_Postcode__c/fields/aos_Locality__c.field-meta.xml
<CustomField>
    <fullName>aos_Locality__c</fullName>
    <description>The Suburb or Locality name</description>
    <inlineHelpText>The Suburb or Locality name</inlineHelpText>
    <label>Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>