force-app/main/default/objects/aos_Postcode__c/fields/aos_MMM_Classification__c.field-meta.xml
<CustomField>
    <fullName>aos_MMM_Classification__c</fullName>
    <label>MMM Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MMM_Classification</valueSetName>
    </valueSet>
</CustomField>