force-app/main/default/objects/aos_Postcode__c/fields/aos_New__c.field-meta.xml
<CustomField>
    <fullName>aos_New__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>