force-app/main/default/objects/aos_Postcode__c/fields/aos_PHN__c.field-meta.xml
<CustomField>
    <fullName>aos_PHN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PHN</label>
    <referenceTo>aos_PHN__c</referenceTo>
    <relationshipLabel>Postcodes</relationshipLabel>
    <relationshipName>Postcodes</relationshipName>
    <type>Lookup</type>
</CustomField>