force-app/main/default/objects/aos_Postcode__c/fields/aos_Postcode__c.field-meta.xml
<CustomField>
    <fullName>aos_Postcode__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>