force-app/main/default/objects/aos_Postcode__c/fields/aos_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Source_ID__c</fullName>
    <description>The ID from the import source (https://www.matthewproctor.com/australian_postcodes)</description>
    <externalId>true</externalId>
    <label>Source ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>