force-app/main/default/objects/aos_Postcode__c/fields/aos_State__c.field-meta.xml
<CustomField>
    <fullName>aos_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Australian_States</valueSetName>
    </valueSet>
</CustomField>