force-app/main/default/objects/aos_Postcode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>aos_LGA__c</columns>
    <columns>aos_Suburb__c</columns>
    <columns>aos_Postcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>