force-app/main/default/objects/aos_Postcode__c/listViews/aos_QLD_Postcodes.listView-meta.xml
<ListView>
    <fullName>aos_QLD_Postcodes</fullName>
    <columns>NAME</columns>
    <columns>aos_LGA__c</columns>
    <columns>aos_Suburb__c</columns>
    <columns>aos_Locality__c</columns>
    <columns>aos_Postcode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>aos_State__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <label>QLD Postcodes</label>
</ListView>